bug fix
fix cursor not showing as pointer on open/close button

--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -39,6 +39,7 @@
     line-height: 50px;
     color: var(--light-gray);
     font-size: 20px;
+    cursor: pointer;
     transition: 0.5s;
 }
 
@@ -57,6 +58,7 @@
     line-height: 50px;
     color: var(--light-gray);
     font-size: 20px;
+    cursor: pointer;
     transition: 0.5s;
 }
 
